--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="main.css">
+  
+  <script type="text/javascript" src="script.js"></script>
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -27,11 +28,10 @@
   <!-- Add your site or application content here -->
   <h1>Compliment generator</h1>
   <p>Click on the button to generate your compliment.</p>
-  <button id="generator">Generate compliment!</button>
-  
+  <button id="generator" onclick="generateCompliment()">Generate compliment!</button>
+  <h3 id="compliment">Placeholder</h3>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
